removed inline size style

--- a/templates/myaccount/settings.tmpl
+++ b/templates/myaccount/settings.tmpl
@@ -15,23 +15,23 @@
     <input TYPE="hidden" NAME="name" VALUE="<TMPL_VAR NAME=editName>">
  
 		<label for="email_address">Email address:</label><br>
-	  	<input TYPE="text" NAME="email_address" SIZE="80" MAXLENGTH="120" VALUE="<TMPL_VAR NAME=editEmail>">
+	  	<input TYPE="text" NAME="email_address" SIZE="" MAXLENGTH="120" VALUE="<TMPL_VAR NAME=editEmail>">
 	
     <h3>Interlibrary Loan Mailing address</h3> 
 		<label for="library">Library:</label><br>
-	  	<input TYPE="text" NAME="library" SIZE="80" MAXLENGTH="120" VALUE="<TMPL_VAR NAME=editLibrary>"><br />
+	  	<input TYPE="text" NAME="library" SIZE="" MAXLENGTH="120" VALUE="<TMPL_VAR NAME=editLibrary>"><br />
 	
 	    <label for="mailing_address_line1">Street address or PO Box Number:</label><br>
-		<input TYPE="text" NAME="mailing_address_line1" SIZE="60" MAXLENGTH="200" VALUE="<TMPL_VAR NAME=editMailingAddressLine1>"><br />
+		<input TYPE="text" NAME="mailing_address_line1" SIZE="" MAXLENGTH="200" VALUE="<TMPL_VAR NAME=editMailingAddressLine1>"><br />
 	    
 	    <label for="city">Town/City:</label><br>
-		<input TYPE="text" NAME="city" SIZE="60" VALUE="<TMPL_VAR NAME=editCity>"><br />
+		<input TYPE="text" NAME="city" SIZE="" VALUE="<TMPL_VAR NAME=editCity>"><br />
 	    
 	    <label for="province">Province:</label><br>
-		<input TYPE="text" NAME="province" SIZE="2" MAXLENGTH="2" VALUE="<TMPL_VAR NAME=editProvince>"><br />
+		<input TYPE="text" NAME="province" SIZE="" MAXLENGTH="2" VALUE="<TMPL_VAR NAME=editProvince>"><br />
 	      
 	    <label for="post_code">Postal code:</label><br>
-		<input TYPE="text" NAME="post_code" SIZE="6" MAXLENGTH="6" VALUE="<TMPL_VAR NAME=editPostalCode>"> (no spaces)
+		<input TYPE="text" NAME="post_code" SIZE="" MAXLENGTH="6" VALUE="<TMPL_VAR NAME=editPostalCode>"> (no spaces)
 	      
 </div><!--div id instrucitons 1-->	    
 	
