--- a/templates/public/registration.tmpl
+++ b/templates/public/registration.tmpl
@@ -95,7 +95,7 @@ $('document').ready(function(){
 });
 
 </script>
-
+<div id="clear"></div>
 <div id="content">
   <div id="aside-img-left">
     <img src="/img/regional_map.gif" alt="map of Manitoba with all the regions listed">
