re-added aside box
will need david to hid this pre search

--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -260,7 +260,7 @@
 
 <!--***************ARIA MARKER 'COMPLIMENTARY'***************-->
 
-<div id="aside" class="tone-box" role="complimentary" style="display:none;">
+<div id="aside" class="tone-box" role="complimentary">
   <div id="image"></div>
   <div id="stat"></div>
   <div id="leftcontent"></div>
