--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -506,7 +506,6 @@ input[type=text]:focus, input[type=password]:focus
 #butlink {
 	padding: .5em;
 	border: 1px solid inherit;
-	border-color: inherit;
 	margin: .5em;
 	font-size: 1.4em;
 	text-transform: capitalize;
@@ -551,10 +550,10 @@ button {
 	font-size: 1.4em;
 	margin: .5em;
 	padding: .3em;
-	margin: 10px;
 	font-size: 1.4em;
 	text-transform: capitalize;
 	cursor: pointer;
+	border-radius:5px;
 }
 
 .button-left:hover {
@@ -602,8 +601,6 @@ div.termtitle {
     font-weight: bold;
 }
 
-
-
 /*** FILL #fill-table STYLES **/
 
 #fill-table {
@@ -620,25 +617,8 @@ div.termtitle {
 	font-weight: bold;
 	font-size: 1.2em;
 }
-/*
-#fill-table td, #fill-table th {
-}
-#fill-table tr:first-child th {
-  border-top: 0;
-}
-#fill-table tr:last-child td {
-  border-bottom: 0;
-}
-#fill-table tr td:first-child,
-#fill-table tr th:first-child {
-  border-left: 0;
-}
-#fill-table tr td:last-child,
-#fill-table tr th:last-child {
-  border-right: 0;
-}
-*/
-.table-width-pub {
+
+.fill-table-pub {
 	width: 70%;
 }
 
