--- a/templates/public/myaccount.tmpl
+++ b/templates/public/myaccount.tmpl
@@ -72,7 +72,7 @@ $('document').ready(function(){
 <div id="clear"></div>
 <div id="content">
       <h2>My Account</h2>
-      <table id="fill-table-pub" class="fill-table-pub">
+      <table id="fill-table" class="fill-table-pub">
         <tr><th scope="row">Name</th><td><TMPL_VAR name="name"></td></tr>
         <tr><th scope="row">Username</th><td><TMPL_VAR name="username"></td></tr>
         <tr><th scope="row">Home library</th><td><TMPL_VAR name="library"></td></tr>
