--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -19,7 +19,7 @@ $('document').ready(function(){
     <div class="login">
       <div class="login-content tone-box">
 
-          <div class="login-header">
+          <div class="login-header public-style">
               <legend>Login</legend>
             <!--<span class="login-header-title">Log in to fILL</span>-->
           </div>
