--- a/templates/login.tmpl
+++ b/templates/login.tmpl
@@ -21,7 +21,7 @@ $('document').ready(function(){
 <div class="login">
       <div class="login-content tone-box">
 
-          <div class="login-header library-style">
+          <div class="login-header-lib">
               <legend>Login</legend>
           </div>
 
