changed legend tag to h2
cross browser issues with the legend tag. mainly wasn’t styling in IE

--- a/templates/login.tmpl
+++ b/templates/login.tmpl
@@ -22,7 +22,7 @@ $('document').ready(function(){
       <div class="login-content tone-box">
 
           <div id="login-header" class="login-header-lib">
-              <legend>Login</legend>
+              <h2>Login</h2>
           </div>
 
 	  <fieldset class="login">
