--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -20,7 +20,7 @@ $('document').ready(function(){
       <div class="login-content tone-box">
 
           <div id="login-header" class="login-header-pub">
-              <legend>Login</legend>
+              <h2>Login</h2>
             <!--<span class="login-header-title">Log in to fILL</span>-->
           </div>
 
