--- a/templates/search/history.tmpl
+++ b/templates/search/history.tmpl
@@ -89,10 +89,10 @@ $('document').ready(function(){
         <div id="history">
 
           <label for="startdate">Start date:</label>
-          <input id="startdate" type="text">
+          <input id="startdate" type="text"><br>
 
           <label for="enddate">End date:</label>
-          <input id="enddate" type="text">
+          <input id="enddate" type="text"><br>
       
           <input id="dateButton" type="button" class="library-style" value="Fetch requests">
       </div>
