--- a/templates/search/renew-answer.tmpl
+++ b/templates/search/renew-answer.tmpl
@@ -93,7 +93,7 @@ $('document').ready(function(){
     <h2>Instructions</h2>
       <p>If you want to change the due date of items, set the due date and click "Apply due date."  This will change the due dates for all the items in the table.</p>
       <p>For each of the requests that you are renewing, click the "Renew OK" button.</p>
-      <p>For each remaining request - those that will be unfilled - click the "Can't renew".</p>
+      <p>For each remaining request - those that will be unfilled - click the "Can't Renew".</p>
   </div>
 
 </div>
