login field div class clear set to id

--- a/templates/login.tmpl
+++ b/templates/login.tmpl
@@ -15,7 +15,7 @@ $('document').ready(function(){
 });
 </script>
 
-<div class="clear"></div>
+<div id="clear"></div>
  <form action="/cgi-bin/lightning.cgi" method="post" name="loginform" id="loginform">
   
 <div class="login">
