--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -13,7 +13,7 @@ $('document').ready(function(){
 });
 
 </script>
-<div class="clear"></div>
+<div id="clear"></div>
 
 <div class="login">
 
@@ -46,7 +46,7 @@ $('document').ready(function(){
     <input type="hidden" value="https://localhost/cgi-bin/public.cgi?rm=search_form;submit=Log%20in" name="destination">
     <input type="hidden" value="authen_login" name="rm">
   </form>
-  
+
 </div>
 
 <script language="JavaScript" type="text/javascript">
