new covers layout 2

--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -179,7 +179,8 @@
 <!--***************ARIA MARKER 'MAIN'***************-->
 <div id="content">
 
-<div class="tone-box">
+<div id="display" class="tone-box">
+
   <h2>Featured</h2><br>
 
         <!-- The class="coverlink" is used to drive the click-the-image-to-search code;
@@ -187,22 +188,21 @@
   -->
 
   <div id="covers">
-        <a href="#" class="coverlink" title="Craig Davidson, Cataract City" >
-    <img class="covers4" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-cataractcity.jpg">
-  </a>
-<a href="#" class="coverlink" title="Lisa Moore, Caught">
-    <img class="covers4" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-caught.jpeg">
-  </a>
-<a href="#" class="coverlink" title="Dan Vyleta, The Crooked Maid">
-    <img class="covers4" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-crookedmaid.jpg">
-  </a>
-<a href="#" class="coverlink" title="Dennis Bock, Going Home Again">
-    <img class="covers4" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-homeagain.jpg">
-  </a>
+    
+    <a href="#" class="coverlink" title="Craig Davidson, Cataract City" >
+    <img class="covers4" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-cataractcity.jpg"></a>
+    <a href="#" class="coverlink" title="Lisa Moore, Caught">
+    <img class="covers4" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-caught.jpeg"></a>
+    <a href="#" class="coverlink" title="Dan Vyleta, The Crooked Maid">
+    <img class="covers4" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-crookedmaid.jpg"></a>
+    <a href="#" class="coverlink" title="Dennis Bock, Going Home Again">
+    <img class="covers4" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-homeagain.jpg"></a>
+
   </div>
-       <p><strong>Giller Prize 2013 shortlist</strong></p> 
+
+  <p><strong>Giller Prize 2013 shortlist</strong></p> 
        
-</div><!--tone box-->
+</div><!--div id display-->
 
 <main id="main" class="tone-box" role="main">
 
@@ -224,26 +224,6 @@
  
   <div id="recordview">
     <div id="AVnotice">
-     <h2>Featured</h2><br>
-
-        <!-- The class="coverlink" is used to drive the click-the-image-to-search code;
-	     The keywords to search for are taken from the "title" attribute.
-	-->
-  <div id="covers">
-        <a href="#" class="coverlink" title="Craig Davidson, Cataract City" >
-    <img class="covers4" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-cataractcity.jpg">
-  </a>
-<a href="#" class="coverlink" title="Lisa Moore, Caught">
-    <img class="covers4" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-caught.jpeg">
-  </a>
-<a href="#" class="coverlink" title="Dan Vyleta, The Crooked Maid">
-    <img class="covers4" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-crookedmaid.jpg">
-  </a>
-<a href="#" class="coverlink" title="Dennis Bock, Going Home Again">
-    <img class="covers4" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-homeagain.jpg">
-  </a>
-  </div>
-       <p><strong>Giller Prize 2013 shortlist</strong></p> 
       </div>
 
       <div id="ranking" style="clear:left; display:none">
