--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -61,6 +61,7 @@ html, body {
 	margin: .5em;
 	display: block;
 	overflow: ;
+	padding-top: 1px;
 }
 
 img 
@@ -237,7 +238,7 @@ nav li a
 	width: 100%;
 	display: block;
 	margin: 1em 0em;
-	padding-top: 1px;
+	padding: 1em;
 }
 
 #aside
