minor w3c validation tweaks

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -7,15 +7,15 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title><TMPL_VAR name="pagetitle"></title>
 
-  <link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.css">
-  <link type="text/css" rel="stylesheet" href="/css/fILL-library-accessible.1.0.css">
-  <link type="text/css" rel="stylesheet" href="/css/fILL-public-datatables.1.0.css">
-  <link type="text/css" rel="stylesheet" href="/css/fILL-media.1.0.css"> 
+  <link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.css"/>
+  <link type="text/css" rel="stylesheet" href="/css/fILL-library-accessible.1.0.css"/>
+  <link type="text/css" rel="stylesheet" href="/css/fILL-public-datatables.1.0.css"/>
+  <link type="text/css" rel="stylesheet" href="/css/fILL-media.1.0.css"/> 
 
-  <link id="csstheme" type="text/css" rel="stylesheet" href="/css/themes-library-colors.css">
+  <link id="csstheme" type="text/css" rel="stylesheet" href="/css/themes-library-colors.css"/>
 
   <link type="text/css" rel="stylesheet" href=" "></link>
-  <link type="text/css" rel="stylesheet" href="/css/feedstyles.1.1.css">
+  <link type="text/css" rel="stylesheet" href="/css/feedstyles.1.1.css"/>
 
   <!-- jQuery-UI theme:
        1. create a new theme using ThemeRoller, and save it to htdocs/themes/xxxx/
@@ -30,10 +30,10 @@
   <link rel="stylesheet" type="text/css" href="/plugins/jquery-ui-1.11.1/jquery-ui.css">
  -->
 <!-- THEME: add new theme: -->
-  <link id="themeroller-css" rel="stylesheet" type="text/css" href="/themes/fILL-clean/jquery-ui.css">
+  <link id="themeroller-css" rel="stylesheet" type="text/css" href="/themes/fILL-clean/jquery-ui.css"/>
 
-  <link rel="stylesheet" type="text/css" href="/plugins/DataTables-1.10.2/media/css/jquery.dataTables.css">
-  <link rel="stylesheet" type="text/css" href="/plugins/DataTables-1.10.2/extensions/TableTools/css/dataTables.tableTools.css">
+  <link rel="stylesheet" type="text/css" href="/plugins/DataTables-1.10.2/media/css/jquery.dataTables.css"/>
+  <link rel="stylesheet" type="text/css" href="/plugins/DataTables-1.10.2/extensions/TableTools/css/dataTables.tableTools.css"/>
 
 
 
@@ -183,13 +183,13 @@ $('document').ready(function(){
 </head>
 <!--Library Client side fILL-->
 
-<div id="container">
-
 <body class="example_alt_pagination" onload="domReady();">
+
+<div id="container">
 <p>&nbsp;</p>
 <div id="header" class="header-library">
     <div id="header-left">
-      <div id="fill-logo"><a href="/"><img id="theme-logo" src="/img/fill-lib-logo.png" alt="fill"></a></div>
+      <div id="fill-logo"><a href="/"><img id="theme-logo" src="/img/fill-lib-logo.png" alt="fill"/></a></div>
       <div id="fill-tagline"><p id="fill-tagline">connecting libraries, serving patrons.</p></div>
     </div>
 
