display changed to AVnotice

--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -179,7 +179,7 @@
 <!--***************ARIA MARKER 'MAIN'***************-->
 <div id="content">
 
-<div id="display" class="tone-box">
+<div id="AVnotice" class="tone-box">
 
   <h2>Featured</h2><br>
 
@@ -202,7 +202,7 @@
 
   <p><strong>Giller Prize 2013 shortlist</strong></p> 
        
-</div><!--div id display-->
+</div><!--div id AV display-->
 
 <main id="main" class="tone-box" role="main">
 
@@ -223,8 +223,7 @@
   </div>
  
   <div id="recordview">
-    <div id="AVnotice">
-      </div>
+ 
 
       <div id="ranking" style="clear:left; display:none">
        <form name="select">
