user details style

--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -137,7 +137,7 @@
          It doesn't have to be *here*, but it has to be somewhere....
       -->
           <div id="username"><TMPL_VAR name="username"></div>
-          <p><TMPL_VAR name="library"></p>
+          <p><strong><TMPL_VAR name="library"></strong></p>
 	  <input id="incrFont" class="public-style" type="button" value="+A" /><input id="decrFont" class="public-style" type="button" value="-A" />
           <div id="lid" style="display:none"><TMPL_VAR name="lid"></div>
       </div>
@@ -189,14 +189,10 @@
 
   <div id="covers">
     
-    <a href="#" class="coverlink" title="Craig Davidson, Cataract City" >
-    <img class="covers4" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-cataractcity.jpg"></a>
-    <a href="#" class="coverlink" title="Lisa Moore, Caught">
-    <img class="covers4" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-caught.jpeg"></a>
-    <a href="#" class="coverlink" title="Dan Vyleta, The Crooked Maid">
-    <img class="covers4" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-crookedmaid.jpg"></a>
-    <a href="#" class="coverlink" title="Dennis Bock, Going Home Again">
-    <img class="covers4" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-homeagain.jpg"></a>
+    <a href="#" class="coverlink" title="Craig Davidson, Cataract City"><img class="covers4" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-cataractcity.jpg"></a>
+    <a href="#" class="coverlink" title="Lisa Moore, Caught"><img class="covers4" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-caught.jpeg"></a>
+    <a href="#" class="coverlink" title="Dan Vyleta, The Crooked Maid"><img class="covers4" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-crookedmaid.jpg"></a>
+    <a href="#" class="coverlink" title="Dennis Bock, Going Home Again"><img class="covers4" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-homeagain.jpg"></a>
 
   </div>
 
