--- a/templates/login.tmpl
+++ b/templates/login.tmpl
@@ -23,10 +23,10 @@ $('document').ready(function(){
      <fieldset name="login">
        
        <legend>Staff Login</legend>
-       <label for="authen_username">User Name</label>
+       <label for="authen_loginfield">User Name</label>
        <input type="text" value="" autocaptalize="off" name="authen_username" tabindex="1" id="authen_loginfield"><br/>
        
-       <label for="authen_password">Password</label>
+       <label for="authen_passwordfield">Password</label>
        <input type="password" name="authen_password" tabindex="2" id="authen_passwordfield"><br/>
        
        <input type="checkbox" value="1" name="authen_rememberuser" tabindex="3" id="authen_rememberuserfield">Remember User Name<br/>
