--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head><title><TMPL_VAR name="pagetitle"></title>
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!--[if lt IE 9]>
@@ -14,15 +15,15 @@
   </script>
 <![endif]-->
 
-<link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.css">
-<link type="text/css" rel="stylesheet" href="/css/fILL-public-datatables.1.0.css">
-<link id="csstheme" type="text/css" rel="stylesheet" href="/css/themes-public-default.css">
-<link type"text/css" rel="stylesheet" href="/css/fILL-media.1.0.css"> 
+<link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.css"/>
+<link type="text/css" rel="stylesheet" href="/css/fILL-public-datatables.1.0.css"/>
+<link id="csstheme" type="text/css" rel="stylesheet" href="/css/themes-public-default.css"/>
+<link type"text/css" rel="stylesheet" href="/css/fILL-media.1.0.css"/> 
 
 
-<link rel="stylesheet" type="text/css" href="/plugins/jquery-ui-1.11.1/jquery-ui.css">
-<link rel="stylesheet" type="text/css" href="/plugins/DataTables-1.10.2/media/css/jquery.dataTables.css">
-<link rel="stylesheet" type="text/css" href="/plugins/DataTables-1.10.2/extensions/TableTools/css/dataTables.tableTools.css">
+<link rel="stylesheet" type="text/css" href="/plugins/jquery-ui-1.11.1/jquery-ui.css"/>
+<link rel="stylesheet" type="text/css" href="/plugins/DataTables-1.10.2/media/css/jquery.dataTables.css"/>
+<link rel="stylesheet" type="text/css" href="/plugins/DataTables-1.10.2/extensions/TableTools/css/dataTables.tableTools.css"/>
 
 
 <script type="text/javascript" src="/js/jquery-1.11.1.js"></script>  <!-- change to jquer-1.11.1.min.js before going to production -->
