--- a/templates/public/footer.tmpl
+++ b/templates/public/footer.tmpl
@@ -4,7 +4,7 @@
 <footer role="contentinfo">
 <div id="nav2">
   
-    <a href=/cgi-bin/lightning.cgi?rm=environment_form>ENV display</a><span style="color:#aabdba;"> | </span><a href="?authen_logout=1">Log out</a>
+    <a href="/cgi-bin/lightning.cgi?rm=environment_form">ENV display</a><span style="color:#aabdba;"> | </span><a href="?authen_logout=1">Log out</a>
 </div>
   <p>
     <!-- The id="username" div is necessary: the username gets extracted (in 
@@ -21,7 +21,7 @@
 </footer>
 
 <div id="bison-container">
-  <a href="http://www.gov.mb.ca/chc/"><img class="bison" alt="Manitoba Bison Logo" title="Coordinated by the Public Library Service Branch of the Government of Manitoba Tourism, Culture, Heritage and Consumer Protection" src="/img/manitoba.gif"></a>
+  <a href="http://www.gov.mb.ca/chc/"><img class="bison" alt="Manitoba Bison Logo" title="Coordinated by the Public Library Service Branch of the Government of Manitoba Tourism, Culture, Heritage and Consumer Protection" src="/img/manitoba.gif"/></a>
 </div>
 
 </div><!--div id container-->
