--- a/htdocs/css/fILL-library-accessible.1.0.css
+++ b/htdocs/css/fILL-library-accessible.1.0.css
@@ -149,7 +149,13 @@ html, body {
   font-size: 1.1em;
   padding: .5em;
   margin-bottom: .5em;
+  color: #000;
 }
+
+.alert-box a:visited { color: #000; }
+.alert-box a:hover { color: #505050; }
+.alert-box a:active { color: #000; }
+.alert-box a:focus { color: #000; }
 
 .circle {
   font-size: .8em;
