--- a/htdocs/css/fILL-library-accessible.1.0.css
+++ b/htdocs/css/fILL-library-accessible.1.0.css
@@ -153,7 +153,7 @@ html, body {
 }
 
 .alert-box a:visited { color: #000; }
-.alert-box a:hover { color: #505050; }
+.alert-box a:hover { color: red; }
 .alert-box a:active { color: #000; }
 .alert-box a:focus { color: #000; }
 
