--- a/htdocs/css/fILL-library-accessible.1.0.css
+++ b/htdocs/css/fILL-library-accessible.1.0.css
@@ -154,7 +154,7 @@ html, body {
 
 .alert-box a:link { color: #000; }
 .alert-box a:visited { color: #000; }
-.alert-box a:hover { color: red; }
+.alert-box a:hover { color: #505050; }
 .alert-box a:active { color: #000; }
 .alert-box a:focus { color: #000; }
 
