--- a/templates/login.tmpl
+++ b/templates/login.tmpl
@@ -17,14 +17,15 @@ $('document').ready(function(){
 
 <div id="clear"></div>
 
-<form action="/cgi-bin/lightning.cgi" method="post" name="loginform" id="loginform">
    <div class="login">
+
+     <form action="/cgi-bin/lightning.cgi" method="post" name="loginform" id="loginform">
      
      <fieldset name="login">
        
        <legend>Staff Login</legend>
        <label for="authen_loginfield">User Name</label>
-       <input type="text" value="" autocaptalize="off" name="authen_username" tabindex="1" id="authen_loginfield"><br/>
+       <input type="text" value="" autocapitalize="off" name="authen_username" tabindex="1" id="authen_loginfield"><br/>
        
        <label for="authen_passwordfield">Password</label>
        <input type="password" name="authen_password" tabindex="2" id="authen_passwordfield"><br/>
