updated patron guide

--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -27,7 +27,7 @@ $('document').ready(function() {
 	<p><strong>Public fILL</strong></p>
 	<ul>
 	<li><a href="https://fill.sitka.bclibraries.ca/">Public fILL access</a></li>
-	<li><a href="/Patron_Guide.pdf">Patron brochure</a></li>
+	<li><a href="/fILL-Patron_Guide.pdf">Patron brochure</a></li>
 	<li><a href="/patrons-searching-tutorial.pdf">Patron tutorial on Searching and Requesting</a></li>
 	</ul>
 
