updated wish list help text

--- a/templates/myaccount/acquisitions.tmpl
+++ b/templates/myaccount/acquisitions.tmpl
@@ -91,9 +91,10 @@ $('document').ready(function(){
 <div id="instructions" class="tone-box">
     <h2>Instructions</h2>
 
-      <p>Items that you mark as 'Add to Aquisitions' in the 'New patrons requests' and 'Unfilled' tabs will be placed here</p>
-      <p>It's a good way to assist in your libraries collection development</p>
-      <p>Export as a CSV or print out the list and send to collections staff</p>
+      <p>Items that you mark as 'Add to Aquisitions' in the <strong>'New patrons requests'</strong> and <strong>'Unfilled'</strong> tabs will be placed here</p>
+      <p>Make use of the list to assist in your library's collection development</p>
+      <p>Export as a CSV or print out the list and share with collections staff</p>
+      <p>Place a hold on the requested item with the associated member barcode</p> 
 
 </div>
 
